--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,24 @@
+appdirs==1.4.3
+CacheControl==0.12.6
+chardet==3.0.4
+contextlib2==0.6.0
+distlib==0.3.0
+distro==1.4.0
+html5lib==1.0.1
+idna==2.8
+ipaddr==2.2.0
+lockfile==0.12.2
+msgpack==0.6.2
+packaging==20.3
+pep517==0.8.2
+progress==1.5
+psycopg2-binary==2.8.6
+pyparsing==2.4.6
+pytoml==0.1.21
+requests==2.22.0
+retrying==1.3.3
+urllib3==1.25.8
+webencodings==0.5.1
 aiofiles==0.6.0
 alembic==1.5.3
 astroid==2.4.2
@@ -12,7 +33,6 @@ fastapi==0.63.0
 h11==0.12.0
 httpcore==0.12.3
 httpx==0.16.1
-idna==3.1
 isort==5.7.0
 lazy-object-proxy==1.4.3
 Mako==1.1.4
@@ -20,7 +40,6 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 numpy==1.20.1
 opencv-python==4.5.1.48
-psycopg2==2.8.6
 pycodestyle==2.6.0
 pycparser==2.20
 pydantic==1.7.3
